--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@dnd-kit/modifiers": "^7.0.0",
+    "@kinde-oss/kinde-auth-nextjs": "^2.0.5",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.5.2",
     "bcrypt": "^5.1.1",
@@ -18,6 +20,7 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
