--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dnd-kit/modifiers": "^7.0.0",
-    "@kinde-oss/kinde-auth-nextjs": "^2.0.5",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.5.2",
-    "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
     "cryptr": "^6.3.0",
     "framer-motion": "^10.16.4",
@@ -31,6 +28,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.2",
     "postcss": "^8",
     "prisma": "^5.5.2",
     "tailwindcss": "^3.3.0",
