--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.5.2",
+    "@studio-freight/lenis": "^1.0.27",
     "classnames": "^2.3.2",
     "cryptr": "^6.3.0",
     "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
