--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "randomstring": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
     "split-type": "^0.3.4",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/randomstring": "^1.1.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
